add pdf validation